# speech-diarization-lab

./: .gitignore  LICENSE  README.md  WORKLOG.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
demo/: index.html
demo/data/: mix_000.json  mix_000.ref.json  mix_002.json  mix_002.ref.json  mix_007.json  mix_007.ref.json
reports/: benchmark_ami_clustered_small_float16_cuda.json  benchmark_ami_clustered_small_int8_cuda_thr0.8_pad0.25.json  benchmark_ami_pyannote_small_int8_cuda.json  benchmark_clustered_base_float16_cuda.json  benchmark_clustered_base_int8_cpu.json  benchmark_clustered_large-v3_float16_cuda.json  benchmark_clustered_large-v3_int8_cuda.json  benchmark_clustered_large-v3_int8_float16_cuda.json  benchmark_clustered_small_float16_cuda.json  benchmark_clustered_small_float16_cuda_oracle.json  benchmark_clustered_small_int8_cpu.json  benchmark_clustered_tiny_float16_cuda.json  benchmark_clustered_tiny_int8_cpu.json  benchmark_overlap_clustered_small_float16_cuda.json  benchmark_overlap_pyannote_small_int8_cuda.json  benchmark_pyannote_small_int8_cuda.json  pad_sweep.json  pad_sweep_ami_dev.json  threshold_sweep.json  threshold_sweep_ami_dev.json
src/diarlab/: __init__.py  align.py  ami.py  asr.py  audio.py  bench.py  cli.py  cluster.py  diarize.py  embeddings.py  formats.py  live.py  metrics.py  mixtures.py  server.py  types.py  vad.py  windows.py
src/diarlab/static/: live.html
tests/: test_align.py  test_ami.py  test_audio.py  test_cli.py  test_cluster.py  test_formats.py  test_live.py  test_metrics.py  test_mixtures.py  test_server.py  test_sweep.py  test_windows.py
