[project]
name = "speech-diarization-lab"
version = "0.1.0"
description = "Speaker-attributed transcription: faster-whisper ASR plus a from-parts diarization pipeline, scored with WER and DER implemented from scratch."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stanley Jacob" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# Inference backends. Kept out of the core dependencies so the metrics,
# alignment, and clustering logic stay installable and testable without
# pulling torch into CI.
models = [
    "faster-whisper>=1.1",
    "silero-vad>=5.1",
    "speechbrain>=1.0",
    "torch>=2.2",
]
# The pretrained reference pipeline (gated on Hugging Face; needs HF_TOKEN).
reference = [
    "pyannote.audio>=3.1",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
diarlab = "diarlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diarlab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
