[project]
name = "speech-diarization-lab"
version = "0.1.0"
description = "Speaker-attributed transcription: faster-whisper ASR plus a from-parts diarization pipeline, scored with WER and DER implemented from scratch."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stanley Jacob" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# Inference backends. Kept out of the core dependencies so the metrics,
# alignment, and clustering logic stay installable and testable without
# pulling torch into CI.
models = [
    "faster-whisper>=1.1",
    "silero-vad>=5.1",
    "speechbrain>=1.0",
    "torch>=2.2",
]
# The pretrained reference pipeline (gated on Hugging Face; needs HF_TOKEN).
# Pinned below 4.0: the 3.1 pipeline checkpoint is the reference being
# compared against, and 4.x changed both the auth kwarg and the audio
# loading stack.
reference = [
    "pyannote.audio>=3.1,<4.0",
    # pyannote 3.x still imports torchaudio.AudioMetaData, removed in
    # torchaudio 2.9; this drags torch down to a matching 2.8.
    "torchaudio<2.9",
    # pyannote 3.x forwards use_auth_token to hf_hub_download; the kwarg
    # was removed in huggingface_hub 1.0.
    "huggingface_hub<1.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
diarlab = "diarlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diarlab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
